@@ -83,10 +83,6 @@ class PageBase(PluginUI):
         """Get the user's password confirmation."""
         raise NotImplementedError('get_verified_password')
 
-    def select_password(self):
-        """Select the text in the first password entry widget."""
-        raise NotImplementedError('select_password')
-
     def set_auto_login(self, value):
         """Set whether the user should be automatically logged in."""
         raise NotImplementedError('set_auto_login')
@@ -164,9 +160,9 @@ class PageGtk(PageBase):
         self.scrolledwin = builder.get_object('userinfo_scrolledwindow')
 
         self.username_valid_image = builder.get_object('username_valid_image')
-        self.password_valid_image = builder.get_object('password_valid_image')
         self.hostname_valid_image = builder.get_object('hostname_valid_image')
         self.fullname_valid_image = builder.get_object('fullname_valid_image')
+        self.password_valid = builder.get_object('password_valid')
 
         # Some signals need to be connected by hand so that we have the
         # handler ids.
@@ -232,13 +228,6 @@ class PageGtk(PageBase):
     def get_verified_password(self):
         return self.verified_password.get_text()
 
-    def select_password(self):
-        # LP: 344402, the password should be selected if we just said "go back"
-        # to the weak password entry.
-        if self.password.get_text_length():
-            self.password.select_region(0, -1)
-            self.password.grab_focus()
-
     def set_auto_login(self, value):
         self.login_auto.set_active(value)
 
@@ -257,7 +246,7 @@ class PageGtk(PageBase):
         self.username_error_box.show()
 
     def password_error(self, msg):
-        self.password_valid_image.hide()
+        self.password_valid.hide()
         self.password_error_reason.set_text(msg)
         self.password_error_box.show()
 
@@ -325,11 +314,22 @@ class PageGtk(PageBase):
         passw = self.password.get_text()
         vpassw = self.verified_password.get_text()
         allow_empty = self.allow_password_empty
-        if (passw and vpassw) and (allow_empty or (passw == vpassw)):
-            self.password_error_box.hide()
-            self.password_valid_image.show()
+        if allow_empty:
+            self.password_valid.hide()
+        elif passw and vpassw:
+            if passw == vpassw:
+                self.password_error_box.hide()
+                (txt, color) = validation.human_password_strength(passw)
+                txt = self.controller.get_string('ubiquity/text/password/' + txt)
+                txt = '<small><span foreground="%s"><b>%s</b></span></small>' \
+                      % (color, txt)
+                self.password_valid.set_markup(txt)
+                self.password_valid.show()
+            else:
+                self.password_valid.hide()
+                complete = False
         else:
-            self.password_valid_image.hide()
+            self.password_valid.hide()
             complete = False
 
         txt = self.hostname.get_text()
@@ -456,9 +456,6 @@ class PageKde(PageBase):
 
     def get_verified_password(self):
         return unicode(self.page.verified_password.text())
-
-    def select_password(self):
-        self.page.password.selectAll()
 
     def set_auto_login(self, value):
         return self.page.login_auto.setChecked(value)
@@ -589,6 +586,7 @@ class Page(Plugin):
     def prepare(self, unfiltered=False):
         if ('UBIQUITY_FRONTEND' not in os.environ or
             os.environ['UBIQUITY_FRONTEND'] != 'debconf_ui'):
+            self.preseed_bool('user-setup/allow-password-weak', True)
             if self.ui.get_hostname() == '':
                 try:
                     seen = self.db.fget('netcfg/get_hostname', 'seen') == 'true'
@@ -636,7 +634,6 @@ class Page(Plugin):
         # the page to be shown, if they're the only questions not preseeded.
         questions = ['^passwd/user-fullname$', '^passwd/username$',
                      '^passwd/user-password$', '^passwd/user-password-again$',
-                     '^user-setup/password-weak$',
                      'ERROR']
         if 'UBIQUITY_OEM_USER_CONFIG' in os.environ:
             environ = {'OVERRIDE_SYSTEM_USER': '1'}
@@ -652,23 +649,6 @@ class Page(Plugin):
                 self.ui.set_username(value)
 
     def run(self, priority, question):
-        if question.startswith('user-setup/password-weak'):
-            # A dialog is a bit clunky, but workable for now. Perhaps it would
-            # be better to display some text in the style of password_error,
-            # and then let the user carry on anyway by clicking next again?
-            response = self.frontend.question_dialog(
-                self.description(question),
-                self.extended_description(question),
-                ('ubiquity/text/choose_another_password',
-                 'ubiquity/text/continue'))
-            if response is None or response == 'ubiquity/text/continue':
-                self.preseed(question, 'true')
-            else:
-                self.preseed(question, 'false')
-                self.succeeded = False
-                self.done = False
-                self.ui.select_password()
-            return True
         # We need to call info_loop as we switch to the page so the next button
         # gets disabled.
         self.ui.info_loop(None)
